flux/apps/dashboard/glance.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance
  namespace: dashboard
  labels:
    app: glance
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: glance
  template:
    metadata:
      labels:
        app: glance
      annotations:
        configmap.reloader.stakater.com/reload: "glance-config"
    spec:
      containers:
        - name: glance
          image: glanceapp/glance:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
          
          volumeMounts:
            - name: config-volume
              mountPath: /app/config/glance.yml
              subPath: glance.yml
            - name: etc-localtime
              mountPath: /etc/localtime
              readOnly: true
          
      volumes:
        - name: config-volume
          configMap:
            name: glance-config
        - name: etc-localtime
          hostPath:
            path: /etc/localtime
