flux/apps/dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glance
  namespace: dashboard
spec:
  type: ClusterIP
  selector:
    app: glance
  ports:
    - name: http
      port: 80
      targetPort: 8080
